[gd_scene load_steps=17 format=3 uid="uid://lnv8jrhp2miw"]

[ext_resource type="Script" path="res://src/appdata/maze_level_selection.gd" id="1_cb63j"]
[ext_resource type="Texture2D" uid="uid://bjfi3i074kvsb" path="res://assets/Back button.png" id="2_r6mgi"]
[ext_resource type="Texture2D" uid="uid://csjcqpgmn0wbd" path="res://assets/Hamburger menu button.png" id="3_4l8lw"]
[ext_resource type="FontFile" uid="uid://dxxefdx78tvkr" path="res://assets/TT Chocolates Trial Bold.otf" id="4_fgeg6"]
[ext_resource type="Texture2D" uid="uid://57j4a1va0gvs" path="res://assets/Game selection screen 2.png" id="5_hu500"]
[ext_resource type="PackedScene" uid="uid://dfa66y8w2x1ur" path="res://src/gui/pause_menu.tscn" id="6_caipa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25m2k"]
bg_color = Color(0.823529, 0.0745098, 0.45098, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6ix0"]
bg_color = Color(0.764706, 0.12549, 0.45098, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2b8f"]
bg_color = Color(0.533333, 0.0196078, 0.282353, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fsm3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dx5k6"]
bg_color = Color(0.764706, 0.12549, 0.45098, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxs4h"]
bg_color = Color(0.533333, 0.0196078, 0.282353, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dju5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hbhl"]
bg_color = Color(0.764706, 0.12549, 0.45098, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_accxe"]
bg_color = Color(0.533333, 0.0196078, 0.282353, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jqg1o"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_cb63j")
metadata/_edit_vertical_guides_ = [8.0, 120.0]
metadata/_edit_horizontal_guides_ = [8.0, 48.0]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.917647, 0.827451, 0.87451, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 962

[node name="BackButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.835294, 0.141176, 0.490196, 1)
theme_override_fonts/font = ExtResource("4_fgeg6")
theme_override_font_sizes/font_size = 25
text = "Back"
icon = ExtResource("2_r6mgi")
flat = true

[node name="PauseButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_4l8lw")
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.835294, 0.141176, 0.490196, 1)
theme_override_constants/outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("4_fgeg6")
theme_override_font_sizes/font_size = 45
text = "The Labyrinth
"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 55

[node name="Button" type="Button" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(310, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_fgeg6")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_25m2k")
theme_override_styles/hover = SubResource("StyleBoxFlat_a6ix0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u2b8f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2fsm3")
text = "Level 1"

[node name="Button2" type="Button" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(310, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_fgeg6")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_25m2k")
theme_override_styles/hover = SubResource("StyleBoxFlat_dx5k6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gxs4h")
theme_override_styles/disabled = SubResource("StyleBoxFlat_25m2k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8dju5")
text = "Level 2
"
icon_alignment = 1

[node name="Button4" type="Button" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(310, 105)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_fgeg6")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_25m2k")
theme_override_styles/hover = SubResource("StyleBoxFlat_1hbhl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_accxe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_25m2k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jqg1o")
text = "Level 3"
icon_alignment = 1

[node name="GameSelectionScreen2" type="Sprite2D" parent="."]
position = Vector2(-4616, -960)
scale = Vector2(0.6, 0.465763)
texture = ExtResource("5_hu500")

[node name="Pause" parent="." instance=ExtResource("6_caipa")]
visible = false

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="visibility_changed" from="Pause" to="." method="_on_pause_visibility_changed"]
